# quantica-lang-local

./: .gitattributes  100_test_math.qc  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  README.md  bell_test.qc  linkercommands.txt  test1.qc  test_compile.qc
.github/: FUNDING.yml
.github/workflows/: ci.yml
editors/vscode/: package.json
editors/vscode/syntaxes/: quantica.tmLanguage.json
examples/: bell_test.qc  classes_example.qc  graphics_demo.qc  mnist.qc  predict.qc
q_packages/test_pkg/: init.qc
src/: doc_generator.rs  error.rs  error_bridge.rs  error_codes.rs  graphics_runtime.rs  hardware_integration.rs  lib.rs  linker.rs  main-without-parser.rs  main.rs  qubit_lifecycle.rs  runtime.rs  type_checker.rs
src/codegen/: mod.rs
src/environment/: mod.rs
src/evaluator/: mod.rs
src/graphics/: error_bridge.rs  error_codes.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/quantum_backend/: cirq_local.rs  ibm_qiskit.rs  mod.rs  native_simulator.rs
stdlib/: ai.qc  graphics.qc  math.qc  qgates.qc
tests/: 100_test_math.qc  classes_test.qc  core_languages.qc  modules_and_functions.qc  package_manager.qc  quantum_basics.qc  quantumv1.qc  saveload.qc  simple_test.qc  stdlib_math.qc  stdlib_qgates.qc  tensortest.qc  test_draw.qc  test_lib.qc
