[package]
name = "quantica"
version = "0.1.0"
edition = "2021"


[lib]
name = "quantica"
path = "src/lib.rs"
crate-type = ["staticlib","rlib"]

[[bin]]
name = "quantica"
path = "src/main.rs"

[dependencies]
num-complex = "0.4.6"
rand = "0.8.5"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
libc = "0.2"
actix-web = "4" 
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.dev]

debug = 0
strip = "symbols"
codegen-units = 1 
overflow-checks = false 
lto = "fat"
