[package]
name = "quantica"
version = "0.1.0"
edition = "2021"

# This new [lib] section tells Cargo to build libquantica.a
[lib]
name = "quantica"
path = "src/lib.rs"
crate-type = ["staticlib","rlib"]



# This tells Cargo to also build the quantica.exe compiler
[[bin]]
name = "quantica"
path = "src/main.rs"

[dependencies]
num-complex = "0.4.6"
rand = "0.8.5"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
libc = "0.2"
actix-web = "4"  # The web server framework
serde = { version = "1.0", features = ["derive"] } # For JSON
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
lazy_static = "1.4"
rayon = "1.7"

[profile.dev]

debug = 0
strip = "symbols"
codegen-units = 1 # Force single compilation unit
overflow-checks = false # Can sometimes interfere with code size checks
lto = "fat"
